[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/save_stone/save_stone.gd" type="Script" id=1]
[ext_resource path="res://textures/environment/save_stone.png" type="Texture" id=2]
[ext_resource path="res://sounds/save_stone_interacted.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 10 )

[node name="SaveStone" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2

[node name="GlowSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="StopGlowTImer" type="Timer" parent="."]
one_shot = true

[node name="SaveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="StopGlowTImer" to="." method="_on_StopGlowTImer_timeout"]
